# insight_swarm

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-04-08-insight-swarm-v2.md  2026-04-08-insight-swarm.md
docs/superpowers/specs/: 2026-04-08-insight-swarm-design.md  2026-04-08-insight-swarm-v2-design.md
insight_swarm/: __main__.py  graph.py  state.py
insight_swarm/data/: superstore.csv
insight_swarm/nodes/: analyst.py  executor.py  hypothesis.py  narrator.py  report.py  schema.py  sql_retry.py  sql_writer.py  web_analyst.py  web_search.py
insight_swarm/prompts/: analyst.txt  hypothesis.txt  narrator.txt  sql_writer.txt  web_analyst.txt
insight_swarm/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_graph_routing.py  test_state.py
tests/nodes/: test_analyst.py  test_executor.py  test_hypothesis.py  test_narrator.py  test_report.py  test_schema.py  test_sql_retry.py  test_sql_writer.py  test_web_analyst.py  test_web_search.py
