[project]
name = "insight-swarm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "duckdb>=1.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "plotly>=5.0",
    "jinja2>=3.1",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
