[project]
name = "insight-swarm"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "plotly>=5.0",
    "jinja2>=3.1",
    "duckduckgo-search>=6.0",
    "tabulate>=0.9",
]

[project.scripts]
insight-swarm = "insight_swarm.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
